# tracksy-synthetic-datasets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  generate.yml
synthetic_datasets/: hello.py
synthetic_datasets/factories/: factory_config.py  spotify.py
synthetic_datasets/models/: spotify.py
synthetic_datasets/writers/: spotify.py
